store seleced location on store -m fix search form style on mobile devices

--- a/client/src/components/SearchForm/TimeInput/style.css
+++ b/client/src/components/SearchForm/TimeInput/style.css
@@ -106,6 +106,14 @@
   width: 50%;
 }
 
+.date-header,
+.time-header {
+  padding-left: 18px;
+}
+.time__container,
+.date__container {
+  text-align: center;
+}
 .ant-time-picker {
   width: 155px !important;
 }
