--- a/client/src/containers/Services/media.css
+++ b/client/src/containers/Services/media.css
@@ -1,14 +1,17 @@
 @media only screen and (max-width: 425px) {
+  .header {
+    padding: 0 !important;
+  }
   .min-header {
-    padding: 0 0.5rem !important;
+    padding: 5% !important;
   }
   .left-header {
-    width: 100%;
+    width: 100% !important;
   }
   .treatment-title {
     display: none;
   }
-  .header {
-    padding: 0 !important;
+  .small {
+    width: 100%;
   }
 }
